# zig-golden-float

./: .gitignore  .npmrc  AGENT_TASK_MULTI_LANGUAGE_BINDINGS.md  CLAUDE.md  Cargo.toml  LANGUAGE_BINDINGS.md  LICENSE  README.md  build.rs  build.zig  build.zig.bak  build.zig.zon  install.js
.github/workflows/: bindings-status.yml  deploy-pages.yml  gh-pages.yml  release.yml  test-bindings.yml
.zig-cache/o/9a5a18519eb4410ee64a7642c6c2369c/: formats-tests
c/: gf16.c  gf16.h
conformance/: generate_vectors.zig  vectors.json
cpp/: CMakeLists.txt
cpp/examples/: demo.cpp
cpp/include/goldenfloat/: README.md  gf16.hpp
cpp/tests/: test_gf16.cpp
docs/: multi-language-audit.md  spec-gf16.md  test-vectors.csv  whitepaper.md
docs/research/: gf16_competitors.md  gf16_family_phi_layout.md
docs/whitepaper/: bench_001_results.csv  gf16_comparison.md
examples/: benchmark_formats.c  c_abi_example.c  c_example.c  go_gf16.go  nodejs_gf16.js  python_example.py  pytorch_integration.py  simple_demo.c
go/: README.md
go/goldenfloat/: README.md  gf16.go  gf16_test.go  go.mod
python/: README.md  pyproject.toml
python/goldenfloat/: README.md  __init__.py  _binding.py  gf16.py
python/goldenfloat/tests/: test_gf16.py
rust/: Cargo.toml
rust/gf16/: Cargo.toml
rust/gf16/src/: lib.rs
rust/goldenfloat-sys/: Cargo.toml  README.md  build.rs
rust/goldenfloat-sys/examples/: ffi_example.rs
rust/goldenfloat-sys/src/: lib.rs
rust/src/: lib.rs
scripts/: test_bindings.sh
specs/: TRI-HASHES.md  collections.tri  gf16.tri  hash_table.tri  ops.tri  tf3.tri  transcendental.tri
specs/collections/: bitmap.tri  cmd_list.tri  hashtable.tri  linked_list.tri  list.tri  skip_list.tri  skiplist_impl.tri
specs/spatial/: geo_hash2d.tri
specs/trees/: b_tree.tri  rb_tree.tri
src/: c_abi.zig  golden_float16.zig  main.rs  root.zig  vsa_jit.zig  vsa_jit.zig.bak2
src/c/: gf16.h
src/math/: constants.zig  transcendental.zig
src/ternary/: bigint.zig  hybrid.zig  packed_trit.zig
src/vm/: jit_unified.zig.bak  opcodes.zig  vm.zig  vsa_jit.zig  vsa_jit.zig.bak
src/vsa/: common.zig  core.zig
tables/: cpu_accuracy.csv  fpga_mac_level.csv  fpga_parallel_capacity.csv  fpga_unit_level.csv  quantization_results.csv
tests/: whitepaper_results.zig
tools/: test_bindings.zig
