[package]
name = "golden-float"
version = "1.0.0"
description = "φ-optimized ML number formats (Zig binary wrapper)"
license = "MIT"
repository = "https://github.com/gHashTag/zig-golden-float"
homepage = "https://github.com/gHashTag/zig-golden-float"
documentation = "https://github.com/gHashTag/zig-golden-float/blob/main/README.md"
keywords = ["zig", "ml", "f16", "floating-point", "optimization", "simulation"]
categories = ["science", "mathematics"]
readme = "README.md"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dependencies]
[target.'cfg(unix(all(not(target_os = "windows")))'.dependencies]
libc = "0.2"

[[bin]]
name = "golden-float"
path = "src/main.rs"
