[workspace]
resolver = "2"
members = ["gf16", "goldenfloat-sys"]

# Workspace for GoldenFloat Rust crates
#
# Members:
# - gf16: Pure Rust implementation of GF16 format
# - goldenfloat-sys: Raw FFI bindings to libgoldenfloat C-ABI
#
# Usage:
# cargo build -p gf16           # Build pure Rust crate
# cargo build -p goldenfloat-sys # Build sys crate (requires zig build shared)
