[package]
name = "gf16"
version = "1.1.0"
edition = "2021"
authors = ["Trinity Project"]
license = "MIT"
description = "Safe Rust wrapper for GoldenFloat GF16 (DLFloat 6:9) format"
repository = "https://github.com/gHashTag/zig-golden-float"
keywords = ["float16", "ml", "machine-learning", "phi", "golden-ratio"]
categories = ["no-std", "science", "embedded", "wasm"]

[lib]
name = "gf16"

[features]
default = ["std"]
std = []
no_std = []
c-abi = ["goldenfloat-sys"]

[dependencies]

# C-FFI bindings (optional, workspace member)
goldenfloat-sys = { version = "1.1.0", optional = true, path = "../goldenfloat-sys" }
