[package]
name = "goldenfloat-sys"
version = "1.1.0"
edition = "2021"
authors = ["Trinity Project"]
description = "FFI bindings to GoldenFloat C-ABI library (φ-optimized 16-bit floating point format)"
license = "MIT"
repository = "https://github.com/gHashTag/zig-golden-float"
keywords = ["floating-point", "numerics", "machine-learning", "ffi", "golden-ratio"]
categories = ["mathematics", "api-bindings", "no-std"]
readme = "README.md"
links = "1"

[lib]
name = "goldenfloat_sys"
path = "src/lib.rs"

[dependencies]

[build-dependencies]

[package.metadata.docs.rs]
all-features = true
